--- a/PlanetWallet/Resources/4_Main.storyboard
+++ b/PlanetWallet/Resources/4_Main.storyboard
@@ -50,7 +50,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="411" height="411"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="data" value="테스트"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="data" value="ansrbthd"/>
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wqQ-cu-t5w" userLabel="DimView" customClass="GradientView" customModule="PlanetWallet" customModuleProvider="target">
@@ -76,7 +76,6 @@
                                         <rect key="frame" x="0.0" y="0.0" width="411" height="411"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isHorizontal" value="NO"/>
                                             <userDefinedRuntimeAttribute type="color" keyPath="startColor">
                                                 <color key="value" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
@@ -124,14 +123,14 @@
                                                 <constraint firstAttribute="width" secondItem="tw9-My-Aoq" secondAttribute="height" multiplier="1:1" id="scK-9V-BFl"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="string" keyPath="data" value="테스트"/>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="data" value="ansrbthd"/>
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQe-8d-ie6">
                                             <rect key="frame" x="0.0" y="210.5" width="375" height="119.5"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="cxp-rY-NMa">
-                                                    <rect key="frame" x="118.5" y="20" width="138" height="79"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cxp-rY-NMa">
+                                                    <rect key="frame" x="118.5" y="24.5" width="138" height="70"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rigel-III" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QB-wS-Ubw" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                                                             <rect key="frame" x="23" y="0.0" width="92" height="35"/>
@@ -145,7 +144,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xNi-iT-56P">
-                                                            <rect key="frame" x="0.0" y="44" width="138" height="35"/>
+                                                            <rect key="frame" x="0.0" y="35" width="138" height="35"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x124A…bEF9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2s-Rl-Lg9" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="0.0" width="108" height="35"/>
@@ -168,9 +167,19 @@
                                                         </stackView>
                                                     </subviews>
                                                 </stackView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38K-y5-an8">
+                                                    <rect key="frame" x="118.5" y="59.5" width="138" height="35"/>
+                                                    <connections>
+                                                        <action selector="didTouchedCopyAddr:" destination="pBn-Jn-OOA" eventType="touchUpInside" id="ZUt-G2-ClO"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="leading" secondItem="xNi-iT-56P" secondAttribute="leading" id="E9d-mi-OQ0"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="bottom" secondItem="xNi-iT-56P" secondAttribute="bottom" id="Q1z-de-8AJ"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="top" secondItem="xNi-iT-56P" secondAttribute="top" id="aCX-Ta-TN8"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="trailing" secondItem="xNi-iT-56P" secondAttribute="trailing" id="adt-SP-iqp"/>
                                                 <constraint firstItem="cxp-rY-NMa" firstAttribute="centerX" secondItem="jQe-8d-ie6" secondAttribute="centerX" id="b7f-Wn-wcJ"/>
                                                 <constraint firstItem="cxp-rY-NMa" firstAttribute="centerY" secondItem="jQe-8d-ie6" secondAttribute="centerY" id="f8c-2t-fkP"/>
                                             </constraints>
@@ -393,94 +402,6 @@
             </objects>
             <point key="canvasLocation" x="-18.840579710144929" y="123.21428571428571"/>
         </scene>
-        <!--Est View Controller-->
-        <scene sceneID="cpU-WQ-3eU">
-            <objects>
-                <viewController id="ZBk-6v-GYT" customClass="TEstViewController" customModule="PlanetWallet" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="sVo-Ur-YFC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ut-Sq-GP4" userLabel="BgPlanetContainer">
-                                <rect key="frame" x="-14" y="-100" width="442" height="442"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QaU-yL-zHo" userLabel="BgPlanetView" customClass="PlanetView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="442" height="442"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="data" value="문규송"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w14-3D-MMA" userLabel="DimView" customClass="GradientView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="442" height="442"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="firstColor">
-                                                <color key="value" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="secondColor">
-                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isHorizontal" value="NO"/>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
-                                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1zS-r6-m2C">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="chn-Ry-6vX">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3f-QT-aYa">
-                                            <rect key="frame" x="184" y="150" width="46" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="Button"/>
-                                            <connections>
-                                                <action selector="didTouched:" destination="ZBk-6v-GYT" eventType="touchUpInside" id="Za7-VA-1Mr"/>
-                                            </connections>
-                                        </button>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </view>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="eFa-pl-014">
-                                        <rect key="frame" x="0.0" y="358" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eFa-pl-014" id="40g-7w-74R">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="7zp-bc-Ujc" firstAttribute="bottom" secondItem="1zS-r6-m2C" secondAttribute="bottom" id="por-jp-ddV"/>
-                            <constraint firstItem="7zp-bc-Ujc" firstAttribute="trailing" secondItem="1zS-r6-m2C" secondAttribute="trailing" id="qln-SF-EbP"/>
-                            <constraint firstItem="1zS-r6-m2C" firstAttribute="top" secondItem="7zp-bc-Ujc" secondAttribute="top" id="tE9-YS-dV1"/>
-                            <constraint firstItem="1zS-r6-m2C" firstAttribute="leading" secondItem="7zp-bc-Ujc" secondAttribute="leading" id="yQO-dK-P2V"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="7zp-bc-Ujc"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="lPj-wG-PrS"/>
-                    <connections>
-                        <segue destination="oky-eY-4iW" kind="show" identifier="main_to_setting" id="8A9-KI-PBX"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dog-dP-adf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="765" y="-571"/>
-        </scene>
         <!--TokenAddController-->
         <scene sceneID="n7r-vo-c5t">
             <objects>
@@ -525,7 +446,4 @@
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="JN4-AP-6ud"/>
-    </inferredMetricsTieBreakers>
 </document>
